fix about spacing

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -60,7 +60,7 @@
 
     &__copy {
         width: 90%;
-        margin: 0 100px 40px 100px;
+        margin: 0 60px 40px 60px;
         display: flex;
         flex-direction: row;
 
